feat: transition dialog
