# docs/swagger.json
@@ -1,4 +1,5 @@
 {
+    "schemes": [],
     "swagger": "2.0",
     "info": {
         "description": "Poprako-S refactor API documentation",
@@ -6,6 +7,8 @@
         "contact": {},
         "version": "0.4.0"
     },
+    "host": "",
+    "basePath": "",
     "paths": {
         "/api/v1/announcements": {
             "get": {
@@ -4057,7 +4060,15 @@
                 "typeset_start",
                 "typeset_complete",
                 "review_complete",
-                "publish_complete"
+                "publish_complete",
+                "upload_revert",
+                "translate_start_revert",
+                "translate_revert",
+                "proofread_start_revert",
+                "proofread_revert",
+                "typeset_start_revert",
+                "typeset_revert",
+                "review_revert"
             ],
             "x-enum-varnames": [
                 "WorkflowUploadComplete",
@@ -4068,7 +4079,15 @@
                 "WorkflowTypesetStart",
                 "WorkflowTypesetComplete",
                 "WorkflowReviewComplete",
-                "WorkflowPublishComplete"
+                "WorkflowPublishComplete",
+                "WorkflowUploadRevert",
+                "WorkflowTranslateStartRevert",
+                "WorkflowTranslateRevert",
+                "WorkflowProofreadStartRevert",
+                "WorkflowProofreadRevert",
+                "WorkflowTypesetStartRevert",
+                "WorkflowTypesetRevert",
+                "WorkflowReviewRevert"
             ]
         },
         "res.HttpRes-any": {
@@ -5035,12 +5054,20 @@
                     "description": "`IsPinned` optionally updates pinned status.",
                     "type": "boolean"
                 },
+                "revert_transition": {
+                    "description": "`RevertTransition` drives a revert of one workflow timestamp back to NULL\nMutually exclusive with `WorkflowTransition`\nPublish-complete cannot be reverted",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/enum.WorkflowTransition"
+                        }
+                    ]
+                },
                 "subtitle": {
                     "description": "`Subtitle` is optional subtitle update.",
                     "type": "string"
                 },
                 "workflow_transition": {
-                    "description": "`WorkflowTransition` drives workflow timestamp mutation.",
+                    "description": "`WorkflowTransition` drives forward workflow timestamp mutation",
                     "allOf": [
                         {
                             "$ref": "#/definitions/enum.WorkflowTransition"
